<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:padding="8dip">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/sjsu_logo"/>

    <TextView
        android:id="@+id/activity_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:text="@string/activity_a_label"
        android:textColor="@color/white"
        android:textSize="38sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/font_medium"
            android:text="@string/url_label"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/url_view"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="4dip"
            android:typeface="monospace"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">
        <Button
            android:id="@+id/btn_launch"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:background="@color/dark_yellow"
            android:text="@string/btn_launch_label"
            android:onClick="launchURL"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_green"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="@dimen/font_medium"
        android:text="@string/phone_label"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/phone_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@color/white"
        android:textColor="@color/black"
        android:padding="4dip"
        android:typeface="monospace"
        android:inputType="phone"
        />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">
    <Button
        android:id="@+id/btn_ring"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@color/dark_red"
        android:text="@string/btn_ring_label"
        android:onClick="ringNumber"
        />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_green"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">
    <Button
        android:id="@+id/btn_closeApp"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@color/black"
        android:text="@string/btn_close_app_label"
        android:onClick="finishActivityA"
        />
</RelativeLayout>
</LinearLayout>
